// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectSavedSearches renders 1`] = `
<ProjectSavedSearchContainer
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <ProjectSavedSearches
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
  >
    <SideEffect(DocumentTitle)
      title="Saved Searches - Sentry"
    >
      <DocumentTitle
        title="Saved Searches - Sentry"
      >
        <div>
          <SettingsPageHeading
            noTitleStyles={false}
            title="Saved Searches"
          >
            <Wrapper>
              <div
                className="css-1r5ylk7-Wrapper e1kblvez2"
              >
                <Flex
                  align="center"
                >
                  <Base
                    align="center"
                    className="css-5ipae5"
                  >
                    <div
                      className="css-5ipae5"
                      is={null}
                    >
                      <Title
                        styled={false}
                      >
                        <Base
                          className="css-1ky52ze-Title e1kblvez0"
                        >
                          <div
                            className="css-1ky52ze-Title e1kblvez0"
                            is={null}
                          >
                            <HeaderTitle>
                              <h4
                                className="css-1w8ttcn-HeaderTitle e6lvex72"
                              >
                                Saved Searches
                              </h4>
                            </HeaderTitle>
                          </div>
                        </Base>
                      </Title>
                    </div>
                  </Base>
                </Flex>
              </div>
            </Wrapper>
          </SettingsPageHeading>
          <Panel>
            <Component
              className="css-10qfvek-Panel e1laxa7d0"
            >
              <div
                className="css-10qfvek-Panel e1laxa7d0"
              >
                <PanelHeader
                  disablePadding={true}
                >
                  <Component
                    className="css-1uisq4f-PanelHeader-getPadding e1p8v8nv0"
                    disablePadding={true}
                  >
                    <Flex
                      align="center"
                      className="css-1uisq4f-PanelHeader-getPadding e1p8v8nv0"
                      justify="space-between"
                    >
                      <Base
                        align="center"
                        className="e1p8v8nv0 css-3e5jt6-PanelHeader-getPadding"
                        justify="space-between"
                      >
                        <div
                          className="e1p8v8nv0 css-3e5jt6-PanelHeader-getPadding"
                          is={null}
                        >
                          <Flex
                            flex="1"
                          >
                            <Base
                              className="css-z8nhq7"
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                                is={null}
                              >
                                <Flex
                                  flex="1"
                                  px={2}
                                >
                                  <Base
                                    className="css-1i4q2rt"
                                    flex="1"
                                    px={2}
                                  >
                                    <div
                                      className="css-1i4q2rt"
                                      is={null}
                                    >
                                      Search
                                    </div>
                                  </Base>
                                </Flex>
                                <Flex
                                  flex="1"
                                >
                                  <Base
                                    className="css-z8nhq7"
                                    flex="1"
                                  >
                                    <div
                                      className="css-z8nhq7"
                                      is={null}
                                    >
                                      <InputColumn>
                                        <Flex
                                          flex="1"
                                          justify="center"
                                        >
                                          <Base
                                            className="css-k3hlac"
                                            flex="1"
                                            justify="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                              is={null}
                                            >
                                              My Default
                                            </div>
                                          </Base>
                                        </Flex>
                                      </InputColumn>
                                      <InputColumn>
                                        <Flex
                                          flex="1"
                                          justify="center"
                                        >
                                          <Base
                                            className="css-k3hlac"
                                            flex="1"
                                            justify="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                              is={null}
                                            >
                                              Team Default
                                            </div>
                                          </Base>
                                        </Flex>
                                      </InputColumn>
                                      <InputColumn>
                                        <Flex
                                          flex="1"
                                          justify="center"
                                        >
                                          <Base
                                            className="css-k3hlac"
                                            flex="1"
                                            justify="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                              is={null}
                                            >
                                              Remove
                                            </div>
                                          </Base>
                                        </Flex>
                                      </InputColumn>
                                    </div>
                                  </Base>
                                </Flex>
                              </div>
                            </Base>
                          </Flex>
                        </div>
                      </Base>
                    </Flex>
                  </Component>
                </PanelHeader>
                <PanelBody
                  direction="column"
                  disablePadding={true}
                  flex={false}
                >
                  <div
                    className="css-a4ya23-textStyles"
                  >
                    <SavedSearchRow
                      access={
                        Set {
                          "org:read",
                          "org:write",
                          "org:admin",
                          "org:integrations",
                          "project:read",
                          "project:write",
                          "project:admin",
                          "team:read",
                          "team:write",
                          "team:admin",
                        }
                      }
                      canModify={true}
                      data={
                        Object {
                          "dateCreated": "2017-11-14T02:22:58.026Z",
                          "id": "2",
                          "isDefault": true,
                          "isGlobal": true,
                          "isOrgCustom": false,
                          "isPinned": false,
                          "isPrivate": false,
                          "isUserDefault": false,
                          "name": "Needs Triage",
                          "query": "is:unresolved is:unassigned",
                          "type": 0,
                        }
                      }
                      key="2"
                      onDefault={[Function]}
                      onRemove={[Function]}
                      onUserDefault={[Function]}
                      orgId="org-slug"
                      projectId="project-slug"
                    >
                      <PanelItem
                        align="center"
                        p={0}
                        py={2}
                      >
                        <Base
                          align="center"
                          className="css-16d6l3f-PanelItem eo8n7lk0"
                          p={0}
                          py={2}
                        >
                          <div
                            className="css-16d6l3f-PanelItem eo8n7lk0"
                            is={null}
                          >
                            <Flex
                              direction="column"
                              flex="1"
                              px={2}
                            >
                              <Base
                                className="css-16auc1r"
                                direction="column"
                                flex="1"
                                px={2}
                              >
                                <div
                                  className="css-16auc1r"
                                  is={null}
                                >
                                  <SearchTitle>
                                    <div
                                      className="css-225nrx-SearchTitle e1e9fsi50"
                                    >
                                      Needs Triage
                                    </div>
                                  </SearchTitle>
                                  <code>
                                    is:unresolved is:unassigned
                                  </code>
                                </div>
                              </Base>
                            </Flex>
                            <Flex
                              flex="1"
                            >
                              <Base
                                className="css-z8nhq7"
                                flex="1"
                              >
                                <div
                                  className="css-z8nhq7"
                                  is={null}
                                >
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <Base
                                        className="css-k3hlac"
                                        flex="1"
                                        justify="center"
                                      >
                                        <div
                                          className="css-k3hlac"
                                          is={null}
                                        >
                                          <input
                                            checked={false}
                                            name="userDefault"
                                            onChange={[Function]}
                                            type="radio"
                                          />
                                        </div>
                                      </Base>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <Base
                                        className="css-k3hlac"
                                        flex="1"
                                        justify="center"
                                      >
                                        <div
                                          className="css-k3hlac"
                                          is={null}
                                        >
                                          <input
                                            checked={true}
                                            disabled={false}
                                            name="default"
                                            onChange={[Function]}
                                            type="radio"
                                          />
                                        </div>
                                      </Base>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <Base
                                        className="css-k3hlac"
                                        flex="1"
                                        justify="center"
                                      >
                                        <div
                                          className="css-k3hlac"
                                          is={null}
                                        >
                                          <Confirm
                                            cancelText="Cancel"
                                            confirmText="Confirm"
                                            disableConfirmButton={false}
                                            disabled={false}
                                            message="Are you sure you want to remove this?"
                                            onConfirm={[Function]}
                                            priority="primary"
                                            stopPropagation={false}
                                          >
                                            <Button
                                              disabled={false}
                                              icon="icon-trash"
                                              onClick={[Function]}
                                              size="small"
                                            >
                                              <StyledButton
                                                aria-disabled={false}
                                                disabled={false}
                                                onClick={[Function]}
                                                role="button"
                                                size="small"
                                              >
                                                <ForwardRef
                                                  aria-disabled={false}
                                                  className="css-o6814l-StyledButton-getColors e12ma6z0"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  role="button"
                                                  size="small"
                                                >
                                                  <button
                                                    aria-disabled={false}
                                                    className="css-o6814l-StyledButton-getColors e12ma6z0"
                                                    onClick={[Function]}
                                                    role="button"
                                                    size="small"
                                                  >
                                                    <ButtonLabel
                                                      size="small"
                                                    >
                                                      <Component
                                                        className="css-7ui8bl-ButtonLabel e12ma6z1"
                                                        size="small"
                                                      >
                                                        <span
                                                          className="css-7ui8bl-ButtonLabel e12ma6z1"
                                                        >
                                                          <Icon
                                                            hasChildren={false}
                                                            size="small"
                                                          >
                                                            <Component
                                                              className="css-ljhpxy-Icon e12ma6z2"
                                                              hasChildren={false}
                                                              size="small"
                                                            >
                                                              <span
                                                                className="css-ljhpxy-Icon e12ma6z2"
                                                                size="small"
                                                              >
                                                                <StyledInlineSvg
                                                                  size="12px"
                                                                  src="icon-trash"
                                                                >
                                                                  <InlineSvg
                                                                    className="css-1ov3rcq-StyledInlineSvg e12ma6z3"
                                                                    size="12px"
                                                                    src="icon-trash"
                                                                  >
                                                                    <StyledSvg
                                                                      className="css-1ov3rcq-StyledInlineSvg e12ma6z3"
                                                                      height="12px"
                                                                      viewBox={Object {}}
                                                                      width="12px"
                                                                    >
                                                                      <svg
                                                                        className="e12ma6z3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                        height="12px"
                                                                        viewBox={Object {}}
                                                                        width="12px"
                                                                      >
                                                                        <use
                                                                          href="#test"
                                                                          xlinkHref="#test"
                                                                        />
                                                                      </svg>
                                                                    </StyledSvg>
                                                                  </InlineSvg>
                                                                </StyledInlineSvg>
                                                              </span>
                                                            </Component>
                                                          </Icon>
                                                        </span>
                                                      </Component>
                                                    </ButtonLabel>
                                                  </button>
                                                </ForwardRef>
                                              </StyledButton>
                                            </Button>
                                            <Modal
                                              animation={false}
                                              autoFocus={true}
                                              backdrop={true}
                                              bsClass="modal"
                                              dialogComponentClass={[Function]}
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            >
                                              <Modal
                                                autoFocus={true}
                                                backdrop={true}
                                                backdropClassName="modal-backdrop"
                                                containerClassName="modal-open"
                                                enforceFocus={true}
                                                keyboard={true}
                                                manager={
                                                  ModalManager {
                                                    "add": [Function],
                                                    "containers": Array [],
                                                    "data": Array [],
                                                    "handleContainerOverflow": true,
                                                    "hideSiblingNodes": true,
                                                    "isTopModal": [Function],
                                                    "modals": Array [],
                                                    "remove": [Function],
                                                  }
                                                }
                                                onEntering={[Function]}
                                                onExited={[Function]}
                                                onHide={[Function]}
                                                renderBackdrop={[Function]}
                                                restoreFocus={true}
                                                show={false}
                                              />
                                            </Modal>
                                          </Confirm>
                                        </div>
                                      </Base>
                                    </Flex>
                                  </InputColumn>
                                </div>
                              </Base>
                            </Flex>
                          </div>
                        </Base>
                      </PanelItem>
                    </SavedSearchRow>
                    <SavedSearchRow
                      access={
                        Set {
                          "org:read",
                          "org:write",
                          "org:admin",
                          "org:integrations",
                          "project:read",
                          "project:write",
                          "project:admin",
                          "team:read",
                          "team:write",
                          "team:admin",
                        }
                      }
                      canModify={true}
                      data={
                        Object {
                          "dateCreated": "2017-11-14T02:22:58.026Z",
                          "id": "1",
                          "isDefault": false,
                          "isGlobal": false,
                          "isOrgCustom": false,
                          "isPinned": false,
                          "isPrivate": false,
                          "isUserDefault": true,
                          "name": "Unresolved Issues",
                          "query": "is:unresolved",
                          "type": 0,
                        }
                      }
                      key="1"
                      onDefault={[Function]}
                      onRemove={[Function]}
                      onUserDefault={[Function]}
                      orgId="org-slug"
                      projectId="project-slug"
                    >
                      <PanelItem
                        align="center"
                        p={0}
                        py={2}
                      >
                        <Base
                          align="center"
                          className="css-16d6l3f-PanelItem eo8n7lk0"
                          p={0}
                          py={2}
                        >
                          <div
                            className="css-16d6l3f-PanelItem eo8n7lk0"
                            is={null}
                          >
                            <Flex
                              direction="column"
                              flex="1"
                              px={2}
                            >
                              <Base
                                className="css-16auc1r"
                                direction="column"
                                flex="1"
                                px={2}
                              >
                                <div
                                  className="css-16auc1r"
                                  is={null}
                                >
                                  <SearchTitle>
                                    <div
                                      className="css-225nrx-SearchTitle e1e9fsi50"
                                    >
                                      Unresolved Issues
                                    </div>
                                  </SearchTitle>
                                  <code>
                                    is:unresolved
                                  </code>
                                </div>
                              </Base>
                            </Flex>
                            <Flex
                              flex="1"
                            >
                              <Base
                                className="css-z8nhq7"
                                flex="1"
                              >
                                <div
                                  className="css-z8nhq7"
                                  is={null}
                                >
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <Base
                                        className="css-k3hlac"
                                        flex="1"
                                        justify="center"
                                      >
                                        <div
                                          className="css-k3hlac"
                                          is={null}
                                        >
                                          <input
                                            checked={true}
                                            name="userDefault"
                                            onChange={[Function]}
                                            type="radio"
                                          />
                                        </div>
                                      </Base>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <Base
                                        className="css-k3hlac"
                                        flex="1"
                                        justify="center"
                                      >
                                        <div
                                          className="css-k3hlac"
                                          is={null}
                                        >
                                          <input
                                            checked={false}
                                            disabled={false}
                                            name="default"
                                            onChange={[Function]}
                                            type="radio"
                                          />
                                        </div>
                                      </Base>
                                    </Flex>
                                  </InputColumn>
                                  <InputColumn>
                                    <Flex
                                      flex="1"
                                      justify="center"
                                    >
                                      <Base
                                        className="css-k3hlac"
                                        flex="1"
                                        justify="center"
                                      >
                                        <div
                                          className="css-k3hlac"
                                          is={null}
                                        >
                                          <Confirm
                                            cancelText="Cancel"
                                            confirmText="Confirm"
                                            disableConfirmButton={false}
                                            disabled={false}
                                            message="Are you sure you want to remove this?"
                                            onConfirm={[Function]}
                                            priority="primary"
                                            stopPropagation={false}
                                          >
                                            <Button
                                              disabled={false}
                                              icon="icon-trash"
                                              onClick={[Function]}
                                              size="small"
                                            >
                                              <StyledButton
                                                aria-disabled={false}
                                                disabled={false}
                                                onClick={[Function]}
                                                role="button"
                                                size="small"
                                              >
                                                <ForwardRef
                                                  aria-disabled={false}
                                                  className="css-o6814l-StyledButton-getColors e12ma6z0"
                                                  disabled={false}
                                                  onClick={[Function]}
                                                  role="button"
                                                  size="small"
                                                >
                                                  <button
                                                    aria-disabled={false}
                                                    className="css-o6814l-StyledButton-getColors e12ma6z0"
                                                    onClick={[Function]}
                                                    role="button"
                                                    size="small"
                                                  >
                                                    <ButtonLabel
                                                      size="small"
                                                    >
                                                      <Component
                                                        className="css-7ui8bl-ButtonLabel e12ma6z1"
                                                        size="small"
                                                      >
                                                        <span
                                                          className="css-7ui8bl-ButtonLabel e12ma6z1"
                                                        >
                                                          <Icon
                                                            hasChildren={false}
                                                            size="small"
                                                          >
                                                            <Component
                                                              className="css-ljhpxy-Icon e12ma6z2"
                                                              hasChildren={false}
                                                              size="small"
                                                            >
                                                              <span
                                                                className="css-ljhpxy-Icon e12ma6z2"
                                                                size="small"
                                                              >
                                                                <StyledInlineSvg
                                                                  size="12px"
                                                                  src="icon-trash"
                                                                >
                                                                  <InlineSvg
                                                                    className="css-1ov3rcq-StyledInlineSvg e12ma6z3"
                                                                    size="12px"
                                                                    src="icon-trash"
                                                                  >
                                                                    <StyledSvg
                                                                      className="css-1ov3rcq-StyledInlineSvg e12ma6z3"
                                                                      height="12px"
                                                                      viewBox={Object {}}
                                                                      width="12px"
                                                                    >
                                                                      <svg
                                                                        className="e12ma6z3 css-1jjmnki-StyledSvg-StyledInlineSvg e2idor0"
                                                                        height="12px"
                                                                        viewBox={Object {}}
                                                                        width="12px"
                                                                      >
                                                                        <use
                                                                          href="#test"
                                                                          xlinkHref="#test"
                                                                        />
                                                                      </svg>
                                                                    </StyledSvg>
                                                                  </InlineSvg>
                                                                </StyledInlineSvg>
                                                              </span>
                                                            </Component>
                                                          </Icon>
                                                        </span>
                                                      </Component>
                                                    </ButtonLabel>
                                                  </button>
                                                </ForwardRef>
                                              </StyledButton>
                                            </Button>
                                            <Modal
                                              animation={false}
                                              autoFocus={true}
                                              backdrop={true}
                                              bsClass="modal"
                                              dialogComponentClass={[Function]}
                                              enforceFocus={true}
                                              keyboard={true}
                                              manager={
                                                ModalManager {
                                                  "add": [Function],
                                                  "containers": Array [],
                                                  "data": Array [],
                                                  "handleContainerOverflow": true,
                                                  "hideSiblingNodes": true,
                                                  "isTopModal": [Function],
                                                  "modals": Array [],
                                                  "remove": [Function],
                                                }
                                              }
                                              onHide={[Function]}
                                              renderBackdrop={[Function]}
                                              restoreFocus={true}
                                              show={false}
                                            >
                                              <Modal
                                                autoFocus={true}
                                                backdrop={true}
                                                backdropClassName="modal-backdrop"
                                                containerClassName="modal-open"
                                                enforceFocus={true}
                                                keyboard={true}
                                                manager={
                                                  ModalManager {
                                                    "add": [Function],
                                                    "containers": Array [],
                                                    "data": Array [],
                                                    "handleContainerOverflow": true,
                                                    "hideSiblingNodes": true,
                                                    "isTopModal": [Function],
                                                    "modals": Array [],
                                                    "remove": [Function],
                                                  }
                                                }
                                                onEntering={[Function]}
                                                onExited={[Function]}
                                                onHide={[Function]}
                                                renderBackdrop={[Function]}
                                                restoreFocus={true}
                                                show={false}
                                              />
                                            </Modal>
                                          </Confirm>
                                        </div>
                                      </Base>
                                    </Flex>
                                  </InputColumn>
                                </div>
                              </Base>
                            </Flex>
                          </div>
                        </Base>
                      </PanelItem>
                    </SavedSearchRow>
                  </div>
                </PanelBody>
              </div>
            </Component>
          </Panel>
        </div>
      </DocumentTitle>
    </SideEffect(DocumentTitle)>
  </ProjectSavedSearches>
</ProjectSavedSearchContainer>
`;

exports[`ProjectSavedSearches renders empty 1`] = `
<ProjectSavedSearchContainer
  params={
    Object {
      "orgId": "org-slug",
      "projectId": "project-slug",
    }
  }
>
  <ProjectSavedSearches
    params={
      Object {
        "orgId": "org-slug",
        "projectId": "project-slug",
      }
    }
  >
    <SideEffect(DocumentTitle)
      title="Saved Searches - Sentry"
    >
      <DocumentTitle
        title="Saved Searches - Sentry"
      >
        <div>
          <SettingsPageHeading
            noTitleStyles={false}
            title="Saved Searches"
          >
            <Wrapper>
              <div
                className="css-1r5ylk7-Wrapper e1kblvez2"
              >
                <Flex
                  align="center"
                >
                  <Base
                    align="center"
                    className="css-5ipae5"
                  >
                    <div
                      className="css-5ipae5"
                      is={null}
                    >
                      <Title
                        styled={false}
                      >
                        <Base
                          className="css-1ky52ze-Title e1kblvez0"
                        >
                          <div
                            className="css-1ky52ze-Title e1kblvez0"
                            is={null}
                          >
                            <HeaderTitle>
                              <h4
                                className="css-1w8ttcn-HeaderTitle e6lvex72"
                              >
                                Saved Searches
                              </h4>
                            </HeaderTitle>
                          </div>
                        </Base>
                      </Title>
                    </div>
                  </Base>
                </Flex>
              </div>
            </Wrapper>
          </SettingsPageHeading>
          <Panel>
            <Component
              className="css-10qfvek-Panel e1laxa7d0"
            >
              <div
                className="css-10qfvek-Panel e1laxa7d0"
              >
                <PanelHeader
                  disablePadding={true}
                >
                  <Component
                    className="css-1uisq4f-PanelHeader-getPadding e1p8v8nv0"
                    disablePadding={true}
                  >
                    <Flex
                      align="center"
                      className="css-1uisq4f-PanelHeader-getPadding e1p8v8nv0"
                      justify="space-between"
                    >
                      <Base
                        align="center"
                        className="e1p8v8nv0 css-3e5jt6-PanelHeader-getPadding"
                        justify="space-between"
                      >
                        <div
                          className="e1p8v8nv0 css-3e5jt6-PanelHeader-getPadding"
                          is={null}
                        >
                          <Flex
                            flex="1"
                          >
                            <Base
                              className="css-z8nhq7"
                              flex="1"
                            >
                              <div
                                className="css-z8nhq7"
                                is={null}
                              >
                                <Flex
                                  flex="1"
                                  px={2}
                                >
                                  <Base
                                    className="css-1i4q2rt"
                                    flex="1"
                                    px={2}
                                  >
                                    <div
                                      className="css-1i4q2rt"
                                      is={null}
                                    >
                                      Search
                                    </div>
                                  </Base>
                                </Flex>
                                <Flex
                                  flex="1"
                                >
                                  <Base
                                    className="css-z8nhq7"
                                    flex="1"
                                  >
                                    <div
                                      className="css-z8nhq7"
                                      is={null}
                                    >
                                      <InputColumn>
                                        <Flex
                                          flex="1"
                                          justify="center"
                                        >
                                          <Base
                                            className="css-k3hlac"
                                            flex="1"
                                            justify="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                              is={null}
                                            >
                                              My Default
                                            </div>
                                          </Base>
                                        </Flex>
                                      </InputColumn>
                                      <InputColumn>
                                        <Flex
                                          flex="1"
                                          justify="center"
                                        >
                                          <Base
                                            className="css-k3hlac"
                                            flex="1"
                                            justify="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                              is={null}
                                            >
                                              Team Default
                                            </div>
                                          </Base>
                                        </Flex>
                                      </InputColumn>
                                      <InputColumn>
                                        <Flex
                                          flex="1"
                                          justify="center"
                                        >
                                          <Base
                                            className="css-k3hlac"
                                            flex="1"
                                            justify="center"
                                          >
                                            <div
                                              className="css-k3hlac"
                                              is={null}
                                            >
                                              Remove
                                            </div>
                                          </Base>
                                        </Flex>
                                      </InputColumn>
                                    </div>
                                  </Base>
                                </Flex>
                              </div>
                            </Base>
                          </Flex>
                        </div>
                      </Base>
                    </Flex>
                  </Component>
                </PanelHeader>
                <PanelBody
                  direction="column"
                  disablePadding={true}
                  flex={false}
                >
                  <div
                    className="css-a4ya23-textStyles"
                  >
                    <EmptyStateWarning
                      small={false}
                    >
                      <EmptyStreamWrapper
                        data-test-id="empty-state"
                      >
                        <div
                          className="css-pdv4gl-EmptyStreamWrapper ernlsnc0"
                          data-test-id="empty-state"
                        >
                          <HeroIcon
                            size="54"
                            src="icon-circle-exclamation"
                          >
                            <Component
                              className="css-1j03cl-HeroIcon e1h7wyrq0"
                              size="54"
                              src="icon-circle-exclamation"
                            >
                              <InlineSvg
                                className="css-1j03cl-HeroIcon e1h7wyrq0"
                                size="54"
                                src="icon-circle-exclamation"
                              >
                                <StyledSvg
                                  className="css-1j03cl-HeroIcon e1h7wyrq0"
                                  height="54"
                                  viewBox={Object {}}
                                  width="54"
                                >
                                  <svg
                                    className="e1h7wyrq0 css-196iyqp-StyledSvg-HeroIcon e2idor0"
                                    height="54"
                                    viewBox={Object {}}
                                    width="54"
                                  >
                                    <use
                                      href="#test"
                                      xlinkHref="#test"
                                    />
                                  </svg>
                                </StyledSvg>
                              </InlineSvg>
                            </Component>
                          </HeroIcon>
                          <p>
                            There are no saved searches for this project.
                          </p>
                        </div>
                      </EmptyStreamWrapper>
                    </EmptyStateWarning>
                  </div>
                </PanelBody>
              </div>
            </Component>
          </Panel>
        </div>
      </DocumentTitle>
    </SideEffect(DocumentTitle)>
  </ProjectSavedSearches>
</ProjectSavedSearchContainer>
`;
